2008-09-04  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: fixed grammar in the description of the skip
	configuration variable.  (closes: #550838; thanks to Brian)

2008-08-24  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: removed setting of os.environ['INSTALL'] in sample
	minimalistic jhbuildrc as it is now done automatically, and through
	the installprog configuration variable.

2008-08-24  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: new use_local_modulesets option.

2008-08-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* C/jhbuild.xml: added explanation on check-target attribute.

2008-08-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es/es.po: Updated Spanish translation by Daniel Mustieles
	* Makefile.am: Added es to DOC_LINGUAS.

2008-07-27  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* Makefile.am: Added sv to DOC_LINGUAS.

2008-05-22  Claude Paroz  <claude@2xlibre.net>

	* Makefile.am: Added fr to DOC_LINGUAS.
	* fr/fr.po: Added French translation.