@@ -1218,7 +1218,14 @@ libgnomecanvas is missing branch definition for gnome-2-20
 	    <simpara>A string specifying how the checkout is done for
 	    directories in version control.  Defaults to
 	    <literal>update</literal>.  This can be set per module
-	    using <varname>module_checkout_mode</varname>.</simpara>
+	    using <varname>module_checkout_mode</varname>.  Possible
+	    values are <literal>update</literal> (update checkout
+	    directory), <literal>clobber</literal> (wipe out directory
+	    before checking out the sources), <literal>export</literal>
+	    (wipe out directory then create an unversioned copy of the
+	    sources) and <literal>copy</literal> (checkout in a directory
+	    different from the one it will build).
+	    </simpara>
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
