@@ -1,5 +1,9 @@
 2008-09-04  Frederic Peters  <fpeters@0d.be>
 
+	* C/jhbuild.xml: added explanation about different checkout modes.
+
+2008-09-04  Frederic Peters  <fpeters@0d.be>
+
 	* C/jhbuild.xml: fixed grammar in the description of the skip
 	configuration variable.  (closes: #550838; thanks to Brian)
 
